--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-{your_repo_name}_DOMAIN_HOST=your_domain
+DOMAIN_HOST=your_domain
 {your_repo_name}_YOUR_APP_NAME=your_app_name
 {your_repo_name}_GITHUB_WEBHOOK_SECRET=github_webhooks_secret_you_set
 {your_repo_name}_DISCORD_DEPLOYMENT_URL=discord's_webhook_url
