--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DOMAIN_HOST=your_domain
 HEROKU_DISCORD_DEPLOYMENT_URL=heroku's_discord's_webhook_url
+GITHUB_WEBHOOK_SECRET=github_webhooks_secret_you_set
 {your_repo_name}_YOUR_APP_NAME=your_app_name
-{your_repo_name}_GITHUB_WEBHOOK_SECRET=github_webhooks_secret_you_set
 {your_repo_name}_DISCORD_DEPLOYMENT_URL=discord's_webhook_url
 {your_repo_name}_AVATAR_URL=avatar_of_the_discord_bot
